# agent-doc-bench

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  fly.toml  pyproject.toml
.github/workflows/: evaluate-doc-draft.yml
.github/workflows/scripts/: apply_draft.py
agent_doc_bench/: cli.py  config.py  doc_requirements.py  doc_source.py  docs_validator.py  runner.py
agent_doc_bench/agent/: base_agent.py  claude_agent.py
agent_doc_bench/reporting/: langsmith_reporter.py  metrics.py  report_formatters.py  results_fetcher.py
agent_doc_bench/sandbox/: executor.py  live_runner.py
agent_doc_bench/sandbox/fixtures/: blpapi_live_shim.py  blpapi_mock.py
agent_doc_bench/scorers/: base.py  execution_scorer.py  llm_judge.py  pattern_scorer.py  static_analysis_scorer.py  syntax_scorer.py
agent_doc_bench/tasks/: base_task.py  task_registry.py
docs_library/blpapi/: v1.md  v2.md
experiments/: doc_ablation.yaml  llm_ablation.yaml  tools_ablation.yaml
mcp_server/: README.md  actions_client.py  dev_oauth_provider.py  github_client.py  server.py
mcp_server/tests/: test_actions_client.py  test_server_dry_run.py
task_suites/blpapi/: auth_tasks.yaml  data_tasks.yaml  pattern_tasks.yaml
tests/: test_apply_draft.py  test_doc_requirements.py  test_docs_validator.py  test_llm_judge.py
