[project]
name = "agent-doc-bench"
version = "0.1.0"
description = "Evaluation framework for measuring how well documentation helps AI coding agents use APIs correctly."
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0,<0.41.0",
    "langsmith>=0.1.0,<0.2.0",
    "pydantic>=2.0,<3.0",
    "typer>=0.12,<0.13",
    "click<8.2",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.0,<14.0",
    "packaging>=24.0,<25.0",
    "ruff>=0.8.0,<0.9.0",
    "bandit>=1.8.0,<2.0.0",
]

[project.optional-dependencies]
# BLPAPI isn't on PyPI and requires Bloomberg's own package index (see
# [tool.uv.sources]/[[tool.uv.index]] below); kept as an extra so a default
# `uv sync` doesn't need network access to blpapi.bloomberg.com and works
# fine for mock-mode (BLOOMBERG_MODE=mock) execution. Install with:
#   uv sync --extra live
live = ["blpapi"]

[project.scripts]
agent-doc-bench = "agent_doc_bench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_doc_bench"]

[tool.uv.sources]
blpapi = { index = "bloomberg" }

[[tool.uv.index]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple"
explicit = true
