[project]
name = "agent-doc-bench"
version = "0.1.0"
description = "Evaluation framework for measuring how well documentation helps AI coding agents use APIs correctly."
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0,<0.41.0",
    "langsmith>=0.1.0,<0.2.0",
    "pydantic>=2.0,<3.0",
    "typer>=0.12,<0.13",
    "click<8.2",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.0,<14.0",
    "packaging>=24.0,<25.0",
    "ruff>=0.8.0,<0.9.0",
    "bandit>=1.8.0,<2.0.0",
]

[project.scripts]
agent-doc-bench = "agent_doc_bench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_doc_bench"]

[dependency-groups]
# BLPAPI isn't on PyPI and requires Bloomberg's own package index (see
# [tool.uv.sources]/[[tool.uv.index]] below). A uv dependency group rather
# than a PEP 621 extra so it can be marked default (see [tool.uv] below) —
# extras are always opt-in with no "install by default" option. Skip it on
# a machine without access to blpapi.bloomberg.com (e.g. CI) with:
#   uv sync --no-default-groups
live = ["blpapi"]
dev = ["pytest>=8.0,<9.0"]
# Separate deployment target (a hosted service, not the benchmark CLI) — kept
# out of default-groups so a plain `uv sync` for benchmark work doesn't pull
# these in. Install explicitly with `uv sync --group mcp_server`.
mcp_server = ["mcp>=1.0", "PyGithub>=2.4"]

[tool.uv]
default-groups = ["live", "dev"]

[tool.pytest.ini_options]
# mcp_server/tests/ needs the optional mcp_server dependency group installed
# (`uv sync --group mcp_server`), so it's excluded from the default `pytest`
# run — run it explicitly with `uv run pytest mcp_server/tests`.
testpaths = ["tests"]

[tool.uv.sources]
blpapi = { index = "bloomberg" }

[[tool.uv.index]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple"
explicit = true
